<resources>
    <string name="app_name">ITCS_4102_Kotlin_final</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emailWord">Email</string>
    <string name="passwordWord">Password</string>
    <string name="loginWord">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="submitWord">Submit</string>
    <string name="cancelWord">Cancel</string>
    <string name="nameWord">Name</string>
    <string name="processWord">Process</string>
    <string name="log_outWord">Log Out</string>
    <string name="items_in_cartWord">Items in Cart:</string>
    <string name="coupons_availableWord">Coupons Available:</string>
    <string name="editWord">Edit</string>
    <string name="item_nameWord">Item Name</string>
    <string name="priceWord">Price</string>
    <string name="amountWord">Amount</string>
    <string name="addWord">Add</string>
    <string name="dollarSign">$</string>
    <string name="buy_get_freeWord">Buy ___, get ___ free</string>
    <string name="percent_offWord">Percent Off</string>
    <string name="amount_offWord">Amount Off</string>
    <string name="_1Num">1</string>
    <string name="_50Num">50</string>
    <string name="_2_50Num">2.50</string>
    <string name="percentSign">%</string>
    <string name="go_backWord">Go Back</string>
    <string name="logoutWord">Logout</string>
    <string name="total_priceWord">Total Price:</string>
    <string name="x">X</string>
    <string name="buyWord">Buy</string>
    <string name="freeWord">Free</string>
    <string name="getWord">, get</string>
    <string name="subtotalWord">Subtotal:</string>
    <string name="taxWord">Tax:</string>
    <string name="discountWord">Discount:</string>
    <string name="new_subtotalWord">New Subtotal:</string>
    <string name="click_an_item_to_view_its_couponsWords">Click an item to view its coupons.</string>
</resources>