<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CouponFragment" >

    <TextView
        android:id="@+id/textViewdollarSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/dollarSign"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/editTextAmtOff"
        app:layout_constraintStart_toEndOf="@+id/rdCoupons"
        app:layout_constraintTop_toTopOf="@+id/editTextAmtOff" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCoupons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonBackFromCoupons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddCoupon">

    </androidx.recyclerview.widget.RecyclerView>

    <RadioGroup
        android:id="@+id/rdCoupons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radBOGO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy_get_freeWord"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radPerOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/percent_offWord"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radAmountOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount_offWord"
            android:textSize="16sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextBuyAmt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/_1Num"
        android:importantForAutofill="no"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/editTextFreeAmt"
        app:layout_constraintStart_toEndOf="@+id/rdCoupons"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextFreeAmt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/_1Num"
        android:importantForAutofill="no"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextBuyAmt"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextPerOff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/_50Num"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="textEnd"
        android:textColorHint="#757575"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/editTextAmtOff"
        app:layout_constraintEnd_toStartOf="@+id/textViewperSign"
        app:layout_constraintStart_toEndOf="@+id/rdCoupons"
        app:layout_constraintTop_toBottomOf="@+id/editTextBuyAmt"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextAmtOff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/_2_50Num"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rdCoupons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewdollarSign"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewperSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/percentSign"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPerOff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextPerOff" />

    <Button
        android:id="@+id/buttonAddCoupon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/addWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewdollarSign"
        app:layout_constraintTop_toBottomOf="@+id/editTextAmtOff" />

    <Spinner
        android:id="@+id/spinnerItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAddCoupon"
        app:layout_constraintEnd_toStartOf="@+id/buttonAddCoupon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonAddCoupon"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/buttonBackFromCoupons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/go_backWord"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>